# bitwise

./: license.txt  pyproject.toml  readme.md
bitwise/: bitwise.py  questions.py  theme.py
tests/: test_bitwise.py
