[tool.poetry]
name = "bitwise"
version = "1.0.1"
description = ""
authors = ["flogic <caden2k3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
inquirer = "^2.7.0"
colorama = "^0.4.4"

[tool.poetry.scripts]
bitwise = "bitwise.bitwise:cli"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
